--- a/style.css
+++ b/style.css
@@ -87,10 +87,41 @@ section {
 .form {
     border: 3px solid blue;
     background-color: #fce138;
-    font-color: #024e76;
+    color: #024e76;
     padding: 20px;
     width: 500px;
     position: absolute;
     bottom: 120px;
     right: 140px;
+}
+
+.form h3 {
+    font-size: 35px;
+    margin: 0px;
+}
+
+.form p {
+    margin: 5px 0 15px 0;
+}
+
+.form-input {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.form label {
+    margin: 0 5px;
+}
+
+.form-button {
+    background-color: #024e76;
+    color: #fce138;
+    padding: 10px 20px;
+    border: none;
+    font-size: 16px;
 }
