--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ section {
 
 .hero {
     height: 600px;
-    background-image: url("assets/images/hero-bg.jpeg");
+    background-image: url("../images/hero-bg.jpeg");
     background-size: cover;
     background-position: center;
     position: relative;
