--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,13 +9,13 @@ color: #39a6b2;
 font-family: Helvetica, Arial, sans-serif;
   }
 
-  header {
-      padding: 20px 35px;
-      background-color: #39a6b2;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-  }
+header {
+    padding: 20px 35px;
+    background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 
   header a {
     text-decoration: none;
@@ -26,14 +26,18 @@ font-family: Helvetica, Arial, sans-serif;
       margin: 7px 0;
   }
 
-  header nav ul li {
-      display: inline;
+  header nav ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      list-style: none;
   }
 
   header nav ul li a {
       margin: 0 30px;
       font-weight: lighter;
-      font-size: 22px;
+      font-size: 1.55vw;
   }
 
   header h1 {
