--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,9 @@
 body {
 color: #39a6b2;
 font-family: Helvetica, Arial, sans-serif;
-  }
+}
 
+/* Header and Nav bar styling begins */
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -46,7 +47,9 @@ header h1 {
     color: #fce138;
     margin: 0;
 }
+/* Header and Nav bar styling ends */
 
+/* Footer styling */
 footer {
     background: #fce138;
     width: 100%;
@@ -70,11 +73,9 @@ footer div {
 footer a {
     color: #024e76;
 }
+/* Footer styling ends */
 
-section {
-    padding: 60px;
-}
-
+/* Hero styling begins */
 .hero {
     background-image: url("../images/hero-bg.jpeg");
     background-size: cover;
@@ -138,6 +139,7 @@ section {
     border: none;
     font-size: 16px;
 }
+/* Hero styling ends */
 
 .intro p {
     line-height : 1.7;
@@ -146,6 +148,10 @@ section {
     font-size: 20px;
     margin: 0 auto;
     text-align: center;
+}
+
+section {
+    padding: 60px;
 }
 
 .section-title {
@@ -270,17 +276,22 @@ section {
     text-align: center;
 }
 
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
+}
+
 .contact-info iframe {
-    width: 400px;
     height: 400px;
 }
 
 .contact-info div {
-    width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
     color: white;
 }
 
@@ -292,8 +303,29 @@ section {
 .contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
+}
+
+.contact-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
+
+.contact-form button {
+    width: 100px;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
 }
 
 .contact-info a {
