--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,14 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    background-image: url("/assets/images/hero-bg.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 header a {
@@ -39,13 +47,22 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
 
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 /* Header and Nav bar styling ends */
 
@@ -84,6 +101,8 @@ footer a {
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 .hero-cta {
@@ -99,15 +118,18 @@ footer a {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .form {
     border: 3px solid blue;
-    background-color: #fce138;
+    background-color: rgba(252,225,56,0.8);
     color: #024e76;
     padding: 20px;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
 .form h3 {
@@ -127,7 +149,14 @@ footer a {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
 }
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
 
 .form label {
     margin: 0 5px;
@@ -139,7 +168,13 @@ footer a {
     padding: 10px 20px;
     border: none;
     font-size: 16px;
+    border-radius: 10px;
 }
+
+.form button:hover {
+    background-color: #39a6b2;  
+}
+
 /* Hero styling ends */
 
 .intro p {
@@ -182,11 +217,11 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #39a6b2;
 }
 
 .step h3 {
@@ -225,6 +260,11 @@ section {
     line-height: 1.5;
     color: #024e76;
 }
+
+.step:last-child {
+    border-bottom: none;
+}
+
 /* End of What You Do section */
 
 /* Trainers section styling begins */
@@ -317,6 +357,7 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
 }
 
 .contact-form button {
@@ -327,7 +368,13 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
 }
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+}  
 
 .contact-info a {
     color: #fce138;
